--- a/src/index.scss
+++ b/src/index.scss
@@ -24,7 +24,7 @@ body {
 
   h1 {
     margin: 0;
-    font-size: 4em;
+    font-size: 5em;
   }
 }
 
@@ -35,6 +35,11 @@ body {
 section {
   padding: 30px 50px;
   border-bottom: .5px solid #ccc;
+
+  .section-container {
+    max-width: 800px;
+    margin: 0 auto;
+  }
 }
 
 .effect {
