--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,19 @@
+// https://coolors.co/fed766-3babdb-d84e6c-efa537-32b57c
+
 $white: #ffffff;
 $black: #000000;
-$yellow: #fcd400;
-$green: #4dabc8;
-$blue: #0b3c49;
-$red: #af0981;
+$yellow: #FED766;
+$green: #32B57C;
+$orange: #EFA537;
+$red: #D84E6C;
+$blue: #3BABDB;
 
 body {
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Sarabun', sans-serif;
 }
 
 .header {
@@ -46,23 +50,34 @@ section {
   cursor: pointer;
   color: $white;
   opacity: 0.7;
-  border-radius: 5px;
+  border-radius: 7px;
   display: inline-block;
-  padding: 7px 10px;
+  padding: 10px 15px;
   margin-bottom: 10px;
+  margin-top: 10px;
   margin-right: 5px;
   transition: opacity 0.5s ease-in-out;
+  font-family: 'Roboto', serif;
+  font-size: 1em;
+  font-weight: 500;
+  transition-property: opacity, background-color;
+  transition-duration: .5s;
   &:hover {
     opacity: 1;
+  }
+
+  &.active {
+    opacity: 1;
+    background-color: black;
   }
 }
 
 .halfline span {
-  background-color: $black;
+  background-color: $green;
 }
 
 .both-side span {
-  background-color: $green;
+  background-color: $orange;
 }
 
 .corners-close span {
@@ -74,11 +89,11 @@ section {
 }
 
 .double-linethrough span {
-  background-color: $yellow;
+  background-color: $green;
 }
 
 .double-underline span {
-  background-color: $green;
+  background-color: $orange;
 }
 
 .fill span {
@@ -90,11 +105,11 @@ section {
 }
 
 .linethrough span {
-  background-color: $yellow;
+  background-color: $green;
 }
 
 .moves span {
-  background-color: $green;
+  background-color: $orange;
 }
 
 .side-line span {
@@ -106,5 +121,5 @@ section {
 }
 
 .underline span {
-  background-color: $yellow;
+  background-color: $green;
 }
