--- a/src/index.scss
+++ b/src/index.scss
@@ -28,12 +28,19 @@ body {
 
   h1 {
     margin: 0;
-    font-size: 5em;
+    font-size: 4em;
+    @media (min-width: 480px) {
+      font-size: 5em;
+    }
   }
 }
 
 .wrapper {
-  margin-top: 300px;
+  margin-top: 280px;
+
+  @media (min-width: 992px) {
+    padding-top: 30px;
+  }
 }
 
 section {
